@@ -1,6 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
+>
     <modelVersion>4.0.0</modelVersion>
     <groupId>edu.illinois.library.cantaloupe</groupId>
     <artifactId>cantaloupe</artifactId>
@@ -11,18 +13,18 @@
     <inceptionYear>2015</inceptionYear>
 
     <properties>
-        <maven.compile.source>17</maven.compile.source>
-        <maven.compile.target>17</maven.compile.target>
+        <maven.compile.source>21</maven.compile.source>
+        <maven.compile.target>21</maven.compile.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <jetty.version>11.0.24</jetty.version>
-        <aws-sdk.version>2.21.4</aws-sdk.version>
-        <jackson.version>2.15.2</jackson.version>
-        <jruby.version>9.4.9.0</jruby.version>
-        <surefire.version>3.0.0-M5</surefire.version>
-        <seleniumhq.version>2.53.1</seleniumhq.version><!-- There are many new versions for this library 4.10.0 latest-->
-        <logback.version>1.2.13</logback.version> <!-- The next two need to be updated in lockstep latest version 1.4 -->
-        <slf4j.version>1.7.36</slf4j.version> <!-- Latest version 2.0.7 -->
+        <jetty.version>12.1.7</jetty.version>
+        <aws-sdk.version>2.42.37</aws-sdk.version>
+        <jackson.version>2.21.3</jackson.version>
+        <jruby.version>10.1.0.0</jruby.version>
+        <surefire.version>3.5.3</surefire.version>
+        <seleniumhq.version>4.43.0</seleniumhq.version>
+        <logback.version>1.5.25</logback.version> <!-- slf4j depends on specific versions of logback. -->
+        <slf4j.version>2.0.13</slf4j.version>
     </properties>
 
     <developers>
@@ -72,13 +74,13 @@
         <dependency>
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
-            <version>7.4</version>
+            <version>7.3</version>
         </dependency>
         <!-- Heap-based object cache: https://github.com/ben-manes/caffeine-->
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
-            <version>3.1.6</version>
+            <version>3.2.3</version>
         </dependency>
         <!-- Used by HeapCache -->
         <dependency>
@@ -115,20 +117,27 @@
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
-            <version>4.0.3</version> <!-- Pinned for Java 8 https://github.com/brettwooldridge/HikariCP#artifacts -->
+            <version>7.0.2</version> <!-- https://github.com/brettwooldridge/HikariCP#artifacts -->
         </dependency>
         <!-- Manages the test configuration. -->
         <dependency>
-            <groupId>commons-configuration</groupId>
-            <artifactId>commons-configuration</artifactId>
-            <version>1.10</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-configuration2</artifactId>
+            <version>2.13.0</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- Required at runtime by commons-configuration2's builder API -->
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.11.0</version>
             <scope>test</scope>
         </dependency>
         <!-- IOUtils is used widely -->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.18.0</version>
+            <version>2.22.0</version>
         </dependency>
         <dependency>
             <groupId>edu.illinois.library</groupId>
@@ -141,30 +150,27 @@
             <artifactId>lettuce-core</artifactId>
             <version>6.2.7.RELEASE</version>
         </dependency>
-        <!-- Dependency on part of Java EE that's available by default in Java 8
-        but not 9 -->
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.4.0-b180830.0359</version>
-        </dependency>
         <!-- Enhanced ImageIO TIFF plugin supporting BigTIFF:
          https://github.com/geosolutions-it/imageio-ext/ -->
         <dependency>
             <groupId>it.geosolutions.imageio-ext</groupId>
             <artifactId>imageio-ext-tiff</artifactId>
-            <!-- This seemed latest version 1.3.2: https://github.com/geosolutions-it/imageio-ext 2023 -->
+            <!-- Delay upgrading to 1.4.x or 2.x.x until
+                 https://github.com/geosolutions-it/imageio-ext/issues/346 is resolved
+                 and we can verify that https://github.com/cantaloupe-project/cantaloupe/issues/879
+                 is solved under those versions
+                 -->
             <version>1.3.2</version>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>6.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.12.0</version>
+            <version>3.18.0</version>
         </dependency>
         <!-- Provides PDFBox for PdfBoxProcessor. Note that there are also some
         other dependencies in this POM used only by PDFBox. -->
@@ -188,7 +194,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.10.0-RC1</version>
+            <version>5.13.4</version>
             <scope>test</scope>
         </dependency>
         <!-- Performance tests -->
@@ -221,13 +227,13 @@
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
-            <version>2.8.0</version>
+            <version>3.2.2</version>
         </dependency>
         <!-- Assists PDFBox in decoding certain PDFs -->
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk18on</artifactId>
-            <version>1.78</version>
+            <version>1.84</version>
         </dependency>
         <!-- Supports <if> expressions in logback.xml -->
         <dependency>
@@ -239,7 +245,7 @@
         N.B.: ALPN support is in a different module. -->
         <dependency>
             <groupId>org.eclipse.jetty.http2</groupId>
-            <artifactId>http2-server</artifactId>
+            <artifactId>jetty-http2-server</artifactId>
             <version>${jetty.version}</version>
         </dependency>
         <!-- Enables support for ALPN in Jetty server.
@@ -278,8 +284,8 @@
             <version>${jetty.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlet</artifactId>
+            <groupId>org.eclipse.jetty.ee10</groupId>
+            <artifactId>jetty-ee10-servlet</artifactId>
             <version>${jetty.version}</version>
         </dependency>
         <dependency>
@@ -309,7 +315,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>${jackson.version}</version>
+            <version>2.21</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -334,18 +340,18 @@
             <artifactId>jackson-datatype-jdk8</artifactId>
             <version>${jackson.version}</version>
         </dependency>
-        <!-- Provides Velocity for the landing and error page templates -->
+        <!-- Provides Thymeleaf for the landing and error page templates -->
         <dependency>
-            <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity-engine-core</artifactId>
-            <version>2.3</version>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>3.1.5.RELEASE</version>
         </dependency>
         <!-- Selenium is used to test the control panel, using a headless HtmlUnit
         browser. -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>htmlunit-driver</artifactId>
-            <version>2.21</version>
+            <artifactId>htmlunit3-driver</artifactId>
+            <version>4.43.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -403,6 +409,11 @@
             <artifactId>url-connection-client</artifactId>
             <version>${aws-sdk.version}</version>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>aws-crt-client</artifactId>
+            <version>${aws-sdk.version}</version>
+        </dependency>
     </dependencies>
 
     <repositories>
@@ -430,7 +441,7 @@
                     <reuseForks>false</reuseForks>
                     <!-- JAI requires this in JDK >= 16. -->
                     <!-- JAI requires this in JDK 16+. It should be removed when JAI is. -->
-                    <argLine>--illegal-access=permit --add-opens java.desktop/sun.awt.image=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.desktop/sun.awt.image=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
 
@@ -470,7 +481,7 @@
                 <configuration>
                     <createDependencyReducedPom>false</createDependencyReducedPom>
                     <transformers>
-                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                             <manifestEntries>
                                 <Main-Class>edu.illinois.library.cantaloupe.StandaloneEntry</Main-Class>
@@ -539,7 +550,7 @@
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>9.0.9</version>
+                <version>12.1.3</version>
                 <executions>
                     <execution>
                         <goals>
@@ -639,7 +650,7 @@
                                     <executable>java</executable>
                                     <arguments>
                                         <argument>-classpath</argument>
-                                        <classpath/>
+                                        <classpath />
                                         <argument>org.openjdk.jmh.Main
                                         </argument>
                                         <argument>-rf</argument>
